# CalculatorLibrary

./: .coverage  .pre-commit-config.yaml  README.md  calculator.py  pyproject.toml  pyvenv.cfg  requirements.txt  test_calculator.py
.circleci/: .coverage  config.yml
.github/workflows/: github-actions-demo.yml
src/: calculator.py
