[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CalculatorLibrary_vegarvi"
version = "0.0.1"
authors = [
  { name="Example Author", email="vegard@xal.no" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vegarvi/calculatorlibrary"
"Bug Tracker" = "https://github.com/vegarvi/calculatorlibrary/issues"
